hotfix: fix categories list spacings for mobile

--- a/assets/sass/_theme/blocks/posts.sass
+++ b/assets/sass/_theme/blocks/posts.sass
@@ -68,6 +68,9 @@
                         display: inline
                         &::before
                             content: ' • '
+                .post-categories
+                    li
+                        margin-right: space(2)
         @include media-breakpoint-up(desktop)
             .large
                 .post
